--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 2px;
+    margin: 2px;
     background-color: #bbbbbb;
     border-radius: 50%;
     display: inline-block;
