--- a/style.css
+++ b/style.css
@@ -122,5 +122,5 @@
   }
   @font-face {
     font-family:solido;
-    src: url(/Fuentes/Cinzel-SemiBold.ttf);
+    src: url(./Fuentes/Cinzel-SemiBold.ttf);
     }
