--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@
     to {opacity: 1}
   }
   @font-face {
-    font-family:solido;
+    font-family:'Cinzel';
     src: url('./Fuentes/Cinzel-SemiBold.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
