--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     margin: 10px;
     flex-direction: column;
     background-color: #00adbd;
-    font-family: solido;
+    font-family: 'Cinzel';
     text-align: center;
 
   }
