--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     cursor: pointer;
     border-radius: 10px;
     background-color:#00adbd;
-    font-family:solido;
+    font-family:'Cinzel';
   }
   
   .slideshow-container {
