detalles fuentes ultimas

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
     background-color: #0096FF;
     text-align: center;
     font-size: 24px;
-    font-family:solido;
+    font-family:'Cinzel';
   
     
   }
